# Checkers-Robot-Bachelor

./: .gitignore  Checkers.md  README.md  cmds.txt  environment.yml  init_window.py  main.py  main_app.py  michal_tele_emergency.txt  mkdocs.yml  notes.md  pyproject.toml  robot-checkers-start.sh  run_web_app.py  test.py  zensical.toml
.github/workflows/: format.yml
GUI/: initializing_window.py
Instructions/: Checkers.md  checkers_variants_notes.md
checkers_game_and_decissions/: Utilities.py  checkers_game.py  console_test_game.py  enum_entities.py  negamax_decission_engine.py  pvc_webgame_controller.py  pvp_controller.py  pvrobot_game_controller.py  report_item.py  utilities.py  web_game.py
checkers_game_and_decissions/decission_engines/: negamax_decission_engine.py  poc_decission_engine.py
checkers_game_and_decissions/rules_desc/: checkers_variants_notes.md
computer_vision/: checkers_recognition.py  game_board_recognition.py  gameplay_recognition.py  rectangle_recognition.py
computer_vision/board_recognition/: game_board_recognition.py  rectangle_recognition.py
computer_vision/checkers_recognition/: checkers_recognition.py
configs/: calibration_config.txt  cor  corner_2h  corner_h  gg.txt  gui_giga_test.txt  gui_test.txt  guit_test_2.txt  j  main_config.txt  name.txt  segg  sss  stest_cor  xd
docs/: Checkers.md  checkers_variants_notes.md  index.md
docs/api/: board.md  board_detector.md  board_tile.md  calibration_controller.md  calibration_data.md  calibration_file_handler.md  checker.md  (+18 more)
robot_manipulation/: CalibrationController.py  DobotController.py  calibrate_to_file.py  calibration.py  corner_calibration_to_file.py  dobot_controller.py  mock_dobot_controller.py  mock_system.py
src/: exceptions.py  main_app.py
(+82 files in other folders)
