[project]
name = "checkers-robot-s24982"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "freesimplegui>=5.2.0.post1",
    "matplotlib>=3.10.8",
    "memory-profiler>=0.61.0",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "opencv-stubs>=0.1.3",
    "pillow>=11.1.0",
    "pydobotplus>=0.1.2",
    # "pysimplegui>=5.0.7",
    # "pysimplegui",
    "pyserial>=3.4",
]

[tool.uv.sources]
# pysimplegui = { git = "https://github.com/PySimpleGUI/PySimpleGUI" }
